Closed Bug 1655895 Opened 5 years ago Closed 5 years ago

bogus timeout passed to Http3Session::SetupTimer

Categories

(Core :: Networking: HTTP, defect, P2)

defect

Tracking

()

RESOLVED FIXED
82 Branch
Tracking Status
firefox82 --- fixed

People

(Reporter: CuveeHsu, Assigned: jhsu)

References

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

I often see the bogus log
Http3Session::SetupTimer to 18446744073709551615 ms

Here's the culprit:
Output::None passed uint::max to indicated a no-op.
We should not set a timer with uint64::max as a delay which hurts performance

Assignee: CuveeHsu → nobody

There's a r+ patch which didn't land and no activity in this bug for 2 weeks.
:CuveeHsu, could you have a look please?
For more information, please visit auto_nag documentation.

Flags: needinfo?(CuveeHsu)
Pushed by ddamjanovic@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0f723de1af73 do not set a timer for neqo passed a UINT64::MAX, r=dragana,necko-reviewers
Assignee: nobody → jhsu
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch

Thanks, Dragana.

Flags: needinfo?(CuveeHsu)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: