Bug 1655895 - do not set a timer for neqo passed a UINT64::MAX, r=dragana,necko-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D85234